Add diffrent Oauth providers : Github, Google and Twitter

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 server.port=${PORT:8080}
 mongo.uri=${MIXIT_MONGO_URI:mongodb://localhost/mixit}
+
+oauth.github.apiKey=${OAUTH_GITHUB_APIKEY:XXXXX-SecretKey-XXXXX}
+oauth.github.clientSecret=${OAUTH_GITHUB_SECRET:XXXXX-SecretKey-XXXXX}
+oauth.google.apiKey=${OAUTH_GOOGLE_APIKEY:XXXXX-SecretKey-XXXXX}
+oauth.google.clientSecret=${OAUTH_GOOGLE_SECRET:XXXXX-SecretKey-XXXXX}
+oauth.twitter.apiKey=${OAUTH_TWITTER_APIKEY:XXXXX-SecretKey-XXXXX}
+oauth.twitter.clientSecret=${OAUTH_TWITTER_SECRET:XXXXX-SecretKey-XXXXX}
